--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@ Back to
     <string name="add_tutorial_title_max_100_characters">Add tutorial title (max 15 words)</string>
     <string name="post">Post</string>
     <string name="search">Search</string>
+    <string name="resetpass">Enter your <b>Email</b> to receive instruction to rest your password.</string>
 </resources>
